test_programs/compile_failure/option_expect_bad_input/src/main.nr
fn main() {
    let inner_value = 3;
    let some = Option::some(inner_value);

    assert(some.expect("Should have the value {inner_value}") == 3);
}
